...
      >
        <View style={{ flex: 1 }}>
          <UserCard
            employeeId={employeeId}
            variant="standard"
            showPresence
            testID="more-user-card"
          />
        </View>
        <Text style={styles.editProfileText}>{profileIcons.editProfile.label}</Text>
        <SFIcon name="chevron.right" size={14} color={palette.text.disabled} />
      </Pressable>

...
